MUI tab navigation, styling

--- a/components/organisms/UploadForm.module.css
+++ b/components/organisms/UploadForm.module.css
@@ -1,6 +1,11 @@
 .uploadOptionColumns {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+}
+
+.uploadOption {
+    padding: 40px;
 }
 
 @media screen and (max-width: 600px) {
