--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,12 +2,14 @@
   padding: 0 2rem;
 }
 
-.main {
-  flex: 1;
+.title {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; 
+  padding: 12px;
+  background-color: black;
+  color: white;
 }
 
 .footer {
