--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 20px;
 }
 
 a {
@@ -15,17 +16,11 @@ a {
   box-sizing: border-box;
 }
 
-h2 {
-  text-align: center;
+.container {
+  margin-left: 10px;
 }
 
 .uploadOptionColumns {
   display: flex;
   flex-direction: row;
-}
-
-.uploadOption {
-  width: 400px;
-  border: 3px solid rgb(170, 170, 170);
-  margin-right: 3px;
 }
