--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .container {
-  padding: 0 2rem;
 }
 
 .title {
@@ -13,19 +12,20 @@
 }
 
 .footer {
-  display: flex;
-  flex: 1;
+  width: 100%;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  bottom: 0;
+  z-index: 500;
+  background-color: black;
+  color: white;
 }
 
-.footer a {
+.company {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
 }
 
 @media (max-width: 600px) {
