--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 20px;
-  overflow-x: hidden;
+  overflow: hidden;
   line-height: 1.5;
 }
 
@@ -25,4 +25,8 @@ a {
 .uploadOptionColumns {
   display: flex;
   flex-direction: row;
+}
+
+.hideTable {
+  display: none;
 }
