--- a/components/atoms/Button.module.css
+++ b/components/atoms/Button.module.css
@@ -6,6 +6,8 @@
     width: 100%;
     font-size: 20px;
     font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .button:hover {
