--- a/components/atoms/Card.module.css
+++ b/components/atoms/Card.module.css
@@ -13,6 +13,9 @@
     padding: 5px;
     font-weight: bold;
     margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .question {
@@ -27,6 +30,15 @@
 
 .extraStyle {
     font-size: 12px;
+}
+
+.logoContainer {
+    display: flex;
+    vertical-align: center;
+    justify-content: center;
+    font-size: 11px;
+    left: 0;
+    bottom: 0;
 }
 
 .buttonContainer{
