--- a/components/atoms/Card.module.css
+++ b/components/atoms/Card.module.css
@@ -11,6 +11,7 @@
     word-wrap: break-word;
     border: 1px solid black;
     padding: 5px;
+    padding-left: 10px;
     font-weight: bold;
     margin-right: 10px;
     display: flex;
@@ -44,4 +45,28 @@
 
 .buttonContainer{
     width: 220px;
+}
+
+
+@media print { 
+    .container{
+        margin: 0;
+        width: 38mm;
+        height: 38mm;
+    }
+    .card {
+        margin: 0;
+        width: 38mm;
+        height: 38mm;
+        font-size: 12px;
+    }
+
+    .question {
+        -webkit-print-color-adjust: exact !important;   /* Chrome, Safari, Edge */
+        color-adjust: exact !important;                 /*Firefox*/
+    }
+
+    .logoContainer{
+        font-size: 8px;
+    }
 }
