--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,7 +31,7 @@
   align-items: center;
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
